fix background image not showing

--- a/stye.css
+++ b/stye.css
@@ -42,14 +42,14 @@ p {
 /* Second image (Portfolio) */
 
 .bgimg-2 {
-    background-image: url("images/parallax2.png");
+    background-image: url("/images/parallax2.png");
     min-height: 100%;
 }
 
 /* Third image (Contact) */
 
 .bgimg-3 {
-    background-image: url("images/parallax3.png");
+    background-image: url("/images/parallax3.png");
     min-height: 100%;
 }
 
